// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     and sum is 
    $2.00
     
  </h1>
</div>
`;

exports[`should correctly render with multiple expenses 1`] = `
<div>
  <h1>
     Viewing 
    2
     
    expenses
     and sum is 
    $20.00
     
  </h1>
</div>
`;
